--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
             href="https://www.github.com/FM-ds">GitHub</a>
     </p>
     <h3 class="small">
-        Ez a weboldal különböző grafikonokat és adatokat tartalmaz a kriptovalutákról. Az oldal célja, hogy interaktív és informatív módon mutassa be az adatokat, segítve ezzel a látogatókat a blokkláncok működésének jobb megértésében. Minden diagram interaktív, lehetővé téve, hogy közelebbről megvizsgálják az adatokat. A grafikonok dinamikusan frissülnek és lehetőséget biztosítanak a részletes elemzésre. Az oldalon található szekciókban részletes elemzéseket és vizualizációkat találsz a legnépszerűbb kriptovalutákról, mint például a Bitcoin, Ethereum és a Solana.
+        Ez a weboldal különböző grafikonokat és adatokat tartalmaz a kriptovalutákról. 
+        <br><br> Az oldal célja, hogy átfogó és felhasználóbarát módon mutassa be a kriptovaluták piacát és a blokklánc technológia működését, mindezt interaktív és informatív módon, segítve ezzel a látogatók jobb megértését. Minden diagram interaktív, lehetővé téve a látogatók számára, hogy közelebbről megvizsgálják az adatokat. Az oldal cél-felhasználói közé tartozik mindenki, aki érdeklődik a kriptovaluták világa iránt, például: befektetők, pénzügyi elemzők, kutatók, diákok.
+        <br><br> Az oldal valósi piaci adatokat használ a kriptovaluták árfolyamairól, a piaci kapitalizációjukról, a kereskedelmi volumenükről, emellett a grafikonok dinamikusan frissülnek és lehetőséget biztosítanak a részletes elemzésre, historikus adatokkal kiegészítve, amelyek segítik a látogatókat hogy nyomon követhessék a trendeket és az időbeli változásokat. Az oldalon található szekciókban részletes elemzéseket és vizualizációkat találhat a látogató a legnépszerűbb kriptovalutákról, mint például a Bitcoin, Ethereum és a Solana.
+
     </h3>
 
     <section>
